check local array first and prevent double ups

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -141,5 +141,9 @@ header {
     .save {
       text-align: right;
     }
+
+    #watched {
+      background-color: rgb(38, 38, 38);
+    }    
   }
   
