--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -91,13 +91,13 @@ header {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 1rem;
-    .fav {
-      &.placeholder {
-        background-color: #ccc;
-        width: 100%; // change to 100% to span entire grid cell
-        height: 0;
-        padding-bottom: 150%;
-      }
+
+    // Style the movie images within the grid
+    img {
+      width: 100%;
+      height: 0;
+      padding-bottom: calc(2 / 3 * 100%); // Set the aspect ratio to 2:3
+      object-fit: cover; // Cut off any excess and maintain aspect ratio
     }
   }
 
@@ -109,13 +109,25 @@ header {
     // Style the movie images within the grid
     img {
       width: 100%;
-      height: 100;
+      height: 0;
       padding-bottom: calc(2 / 3 * 100%); // Set the aspect ratio to 2:3
       object-fit: cover; // Cut off any excess and maintain aspect ratio
     }
   }
 
+  #overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
+    backdrop-filter: blur(5px); /* Adjust the blur amount as needed */
+    display: none;
+  }
+
   #popupBox {
+    //display: none;
     position: fixed;
     top: 50%;
     left: 50%;
