--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -147,8 +147,8 @@ main {
     top: 0;
     left: 0;
     width: 100%;
-    height: 0;
-    background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.535); /* Adjust the opacity as needed */
     backdrop-filter: blur(5px); /* Adjust the blur amount as needed */
     display: none;
 }
@@ -168,7 +168,7 @@ main {
     justify-content: flex-start;
     padding: 20px;
     background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 
     img {
       margin-right: 20px;
@@ -186,10 +186,15 @@ main {
     .buttons {
       padding-top: 1rem;
       padding-bottom: 1rem;
+      border: 0px;
     }
 
     .content {
       flex: 1;
+    }
+
+    #myReview {
+      padding-bottom: 1rem;
     }
 
     .save {
